--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
         image: postgres:10.1
         restart: always
         environment:
-            - POSTGRES_DB=room_bd
-            - POSTGRES_USER=arsik
-            - POSTGRES_PASSWORD=0000
+            - POSTGRES_DB=${DB_DATABASE}
+            - POSTGRES_USER=${DB_USERNAME}
+            - POSTGRES_PASSWORD=${DB_PASSWORD}
         ports:
             - "5432:5432"
